Inlcuded new files to project and added images to assets.

--- a/assets.qrc
+++ b/assets.qrc
@@ -18,5 +18,6 @@
         <file>strings/freshfile</file>
         <file>strings/sortfile</file>
         <file>strings/undertale.ini</file>
+        <file>images/tobdog_wrench.png</file>
     </qresource>
 </RCC>
