Add border editor tool
* Fix typos
* Fix ini widget data handling
* Fix ini widget naming in the backend
* Add a gap between certain widgets
* Add tooltip hints for menu items
* Add more features to the widgets in the backend
* Expand IniWidgets to support the new tool
* Clean up unnecessary code

--- a/web/stylesheets/index.css
+++ b/web/stylesheets/index.css
@@ -318,6 +318,8 @@ button.disabled, select.disabled, input.disabled, label.disabled {
 }
 
 .groupBox {
+    display: flex;
+    gap: 2px;
     margin: 0;
     padding: 0;
 }
@@ -325,6 +327,7 @@ button.disabled, select.disabled, input.disabled, label.disabled {
 .groupBox > fieldset {
     border: 1px solid gray;
     border-radius: 4px;
+    width: 100%;
 }
 
 .editor {
